# fracture

./: Cargo.toml
src/: components.rs  fracture.rs  widgets.rs
src/components/: area.rs  border_chars.rs  dynamic_rect.rs  point.rs  screen.rs  screen_cell.rs  static_rect.rs  widget.rs
src/widgets/: decorated_window.rs  dynamic_layout_window.rs  fancy_label.rs  label.rs  test_widget.rs  vbox_layout.rs
